SERVER-46791 Fix incorrect FCV initialisation check to allow compound hashed index

(cherry picked from commit a9a2bc2fcc4c7b5cd9a01282cd7dded84b888183)